removed deprecated usage, code tuning